[package]
name = "pustaka-rs"
version = "0.1.0"
authors = ["Abadi Kurniawan <abadi.kurniawan@gmail.com>"]

# bin is the entry point for `cargo run` or `cargo build`
[[bin]]
name = "pustaka"
path = "src/server/main.rs"

[[bin]]
name = "seed"
path = "src/server/seed.rs"

[lib]
name = "pustaka"
path = "src/server/lib.rs"

[dependencies]
rocket = "0.3.11"
rocket_codegen = "0.3.11"
rocket_contrib = "0.3.11" 
diesel = { version = "1.3.0", features = ["sqlite"] }
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
csv = "1"
unrar = "0.4.3"