[package]
name = "pustaka-rs"
version = "0.1.0"
authors = ["Abadi Kurniawan <abadi.kurniawan@gmail.com>"]

# bin is the entry point for `cargo run` or `cargo build`
[[bin]]
name = "pustaka"
path = "src/server/main.rs"

[[bin]]
name = "seed"
path = "src/server/seed.rs"

[[bin]]
name = "scanner"
path = "src/server/scanner.rs"

[lib]
name = "pustaka"
path = "src/server/lib.rs"

[dependencies]
diesel = { version = "1.3.0", features = ["sqlite"] }
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
csv = "1"
unrar = "0.4.3"
actix = "0.7"
actix-web = "0.7.8"
futures = "0.1.24"
tokio = "0.1.11"
epub = "1.2.0"
failure = "0.1.2"
zip = "0.5.1"
strsim = "0.8.0"
walkdir = "2.2.7"
lazy_static = "1.2.0"
mime = "0.3.13"
image = "0.21.0"
custom_error = "1.6.0"
